Fixed navigation vertical overflow

--- a/assets/style/nav.css
+++ b/assets/style/nav.css
@@ -74,7 +74,10 @@
     left: 0;
 
     width: 100%;
-    height: 100%;
+    height: calc(100% - 63px - 30px);
+    overflow-y: auto;
+
+    padding-bottom: 30px;
 
     z-index: 9; 
 
